separate config builder for browser environment

--- a/test.html
+++ b/test.html
@@ -1,30 +1,32 @@
 <html>
-    <script src="node_modules/requirejs/require.js"></script>
+    <!-- // <script src="node_modules/requirejs/require.js"></script>
+    //
+    // <script>
+    //     // console.log("Executing require");
+    //     //
+    //     // require.config({
+    //     //     paths: {
+    //     //         "browser-global": "resources/browser-global"
+    //     //     },
+    //     //     shim: {
+    //     //         "browser-global": { exports: "browserGlobal" }
+    //     //     }
+    //     // })
+    //     //
+    //     // require(["browser-global"], function(browserGlobal){
+    //     //     console.log("LOADED");
+    //     //     console.log(browserGlobal);
+    //     //     console.log(require.s.contexts._.defined);
+    //     //     console.log(require.s.contexts._.registry);
+    //     // });
+    //
+    //     var a = 1, b = 2, c = 3;
+    //
+    //     for ( var i in window ) {
+    //         console.log(i, typeof window[i], window[i]);
+    //     }
+    //
+    // </script> -->
 
-    <script>
-        // console.log("Executing require");
-        //
-        // require.config({
-        //     paths: {
-        //         "browser-global": "resources/browser-global"
-        //     },
-        //     shim: {
-        //         "browser-global": { exports: "browserGlobal" }
-        //     }
-        // })
-        //
-        // require(["browser-global"], function(browserGlobal){
-        //     console.log("LOADED");
-        //     console.log(browserGlobal);
-        //     console.log(require.s.contexts._.defined);
-        //     console.log(require.s.contexts._.registry);
-        // });
-
-        var a = 1, b = 2, c = 3;
-
-        for ( var i in window ) {
-            console.log(i, typeof window[i], window[i]);
-        }
-
-    </script>
+    <script src="app/bower_components/q/q.js"></script>
 </html>
